docs/book/samples/appa/unused_binding_check.out
error[unused]: unused binding `x`
  --> unused_binding_check.kso:1:1
   1 | x = 1
       ^
